# django_sql

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  manage.py  pyproject.toml
app/: models.py  serializers.py  settings.py  urls.py  views.py
app/migrations/: 0001_initial.py
app/tests/: test_models.py  test_views.py
